// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachments Modal Attachment from web Should match render of web form 1`] = `
<div
  aria-modal="true"
  class="ReactModal__Content attachments-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="attachments-modal__header"
  >
    <h4>
      <span
        class="translation active"
      >
        Supporting files
      </span>
    </h4>
    <button
      class="attachments-modal__close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
      <span>
        <span
          class="translation active"
        >
          Cancel
        </span>
      </span>
    </button>
  </div>
  <div
    class="attachments-modal__content"
  >
    <div>
      <div
        class="attachments-modal__tabs"
      >
        <div
          aria-controls="tabpanel-uploadComputer"
          aria-selected="false"
          class="tab-link modal-tab-1"
          component="div"
          id="tab-uploadComputer"
          role="tab"
          style=""
        >
          <span
            class="translation active"
          >
            Upload from computer
          </span>
        </div>
        <div
          aria-controls="tabpanel-uploadWeb"
          aria-selected="true"
          class="tab-link modal-tab-2 tab-link-active"
          component="div"
          id="tab-uploadWeb"
          role="tab"
          style="font-weight: bold;"
        >
          <span
            class="translation active"
          >
            Add from web
          </span>
        </div>
      </div>
      <div
        class="attachments-modal__tabs-content"
      >
        <div
          aria-labelledby="tab-uploadComputer"
          class="tab-content centered"
          id="tabpanel-uploadComputer"
          role="tabpanel"
          style="display: none;"
        />
        <div
          aria-labelledby="tab-uploadWeb"
          class="tab-content centered tab-content-visible"
          id="tabpanel-uploadWeb"
          role="tabpanel"
          style=""
        >
          <div
            class="wrapper-web"
          >
            <form
              class=""
            >
              <div
                class="form-group has-feedback "
              >
                <div>
                  <input
                    class="form-control web-attachment-url"
                    name="urlForm.url"
                    placeholder="Paste URL here"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="form-group form-group "
              >
                <div
                  class="field"
                >
                  <input
                    class="form-control web-attachment-name"
                    name="urlForm.name"
                    placeholder="Title"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <button
                class="btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-link fa-w-16 "
                  data-icon="link"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                    fill="currentColor"
                  />
                </svg>
                  
                <span
                  class="translation active"
                >
                  Add from URL
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Attachments Modal Should match render of upload form 1`] = `
<div
  aria-modal="true"
  class="ReactModal__Content attachments-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="attachments-modal__header"
  >
    <h4>
      <span
        class="translation active"
      >
        Supporting files
      </span>
    </h4>
    <button
      class="attachments-modal__close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
      <span>
        <span
          class="translation active"
        >
          Cancel
        </span>
      </span>
    </button>
  </div>
  <div
    class="attachments-modal__content"
  >
    <div>
      <div
        class="attachments-modal__tabs"
      >
        <div
          aria-controls="tabpanel-uploadComputer"
          aria-selected="true"
          class="tab-link modal-tab-1 tab-link-active"
          component="div"
          id="tab-uploadComputer"
          role="tab"
          style="font-weight: bold;"
        >
          <span
            class="translation active"
          >
            Upload from computer
          </span>
        </div>
        <div
          aria-controls="tabpanel-uploadWeb"
          aria-selected="false"
          class="tab-link modal-tab-2"
          component="div"
          id="tab-uploadWeb"
          role="tab"
        >
          <span
            class="translation active"
          >
            Add from web
          </span>
        </div>
      </div>
      <div
        class="attachments-modal__tabs-content"
      >
        <div
          aria-labelledby="tab-uploadComputer"
          class="tab-content centered tab-content-visible"
          id="tabpanel-uploadComputer"
          role="tabpanel"
        >
          <div
            class="attachments-modal__dropzone"
            role="presentation"
            tabindex="0"
          >
            <button
              class="btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-link fa-w-16 "
                data-icon="link"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                  fill="currentColor"
                />
              </svg>
                
              <span
                class="translation active"
              >
                Upload and select file
              </span>
            </button>
            <input
              aria-label="fileInput"
              style="display: none;"
              type="file"
            />
            <h4
              class="attachments-modal__dropzone-title"
            >
              <span
                class="translation active"
              >
                Drag and drop file in this window to upload
              </span>
            </h4>
          </div>
        </div>
        <div
          aria-labelledby="tab-uploadWeb"
          class="tab-content centered"
          id="tabpanel-uploadWeb"
          role="tabpanel"
          style="display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;
